WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259074
REGRESSION(
265636@main
) [JSC] Fix StrCat(ToPrimitive(x), ...) in attemptToMakeFastStringAdd
https://bugs.webkit.org/show_bug.cgi?id=259074
Summary
REGRESSION(265636@main) [JSC] Fix StrCat(ToPrimitive(x), ...) in attemptToMak...
Yijia Huang
Reported
2023-07-10 13:56:27 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2023-07-10 13:58:21 PDT
<
rdar://112016271
>
Yijia Huang
Comment 2
2023-07-10 14:03:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15706
EWS
Comment 3
2023-07-10 17:29:08 PDT
Committed
265927@main
(80a97a5a3797): <
https://commits.webkit.org/265927@main
> Reviewed commits have been landed. Closing PR #15706 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug