[JSC] Fix StrCat(ToPrimitive(x), ...) in attemptToMakeFastStringAdd https://bugs.webkit.org/show_bug.cgi?id=259074 rdar://112016271

Reviewed by Yusuke Suzuki.

Previously, we introduced a fast path [1] for string catenation with
ToPrimitive. And the path doesn't need canOptimizeStringObjectAccess
to be true. This patch reorders the if checks in attemptToMakeFastStringAdd
to avoid canOptimizeStringObjectAccess assertion.

[1] https://commits.webkit.org/265636@main

* JSTests/stress/strcat-str-str-bigint.js: Added.
(foo):
* Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::attemptToMakeFastStringAdd):

Canonical link: https://commits.webkit.org/265927@main